<resources>
    <string name="app_name">Moviemade</string>
    <string name="image_description">Poster</string>
    <string name="no_overview">No Overview</string>
    <string name="search">Search</string>
    <string name="loading_status">Loading…</string>
    <string name="loading_tagline">Loading tagline…</string>
    <string name="no_connection">No connection</string>
    <string name="unknown">Unknown</string>
    <string name="trailers">Trailers</string>
    <string name="video_size">%1$sp</string>
    <string name="about">About</string>
    <string name="app_for_android">%1$s for Android</string>
    <string name="version_build_date">Version %1$s (Build %2$d) of %3$s</string>
    <string name="rate_google_play">Rate on Google Play</string>
    <string name="fork_github">Fork on Github</string>
    <string name="open_source_libs">Open-source Libraries</string>
    <string name="feedback">Feedback</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="other_developer_apps">Other Developer Apps</string>
    <string name="donate_paypal">Donate PayPal</string>
    <string name="include_adult">Include Adult</string>
    <string name="include_adult_info">Toggle the inclusion of adult content</string>
    <string name="in_app_browser">In-App Browser</string>
    <string name="in_app_browser_info">Open external links within the app</string>
    <string name="powered_by">Powered by <![CDATA[<b>]]>Themoviedb.org<![CDATA[</b>]]></string>
    <string name="speak_now">Speak now</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="reviews">Reviews</string>
    <string name="share">Share</string>
    <string name="view_on_tmdb">View on TMDb</string>
    <string name="view_on_imdb">View on IMDb</string>
    <string name="view_homepage">View Homepage</string>
    <string name="subject">Subject</string>
    <string name="share_via">Share via</string>



    <!--random movie view-->
    <string name="Tune">Tune</string>
    <string name="AppName">Moviemade</string>
    <string name="AppNameBeta">Moviemade Beta</string>
    <string name="LanguageName">English</string>
    <string name="LanguageNameInEnglish">English</string>
    <string name="LanguageCode">en</string>
    <!--Main-->
    <string name="NoMovies">No movies</string>
    <string name="Popular">Popular</string>
    <string name="Genres">Genres</string>
    <string name="LoadingGenres">Loading genres…</string>
    <string name="Favorites">Favorites</string>
    <string name="Watchlist">Watchlist</string>
    <string name="Movies">Movies</string>
    <string name="ChangeViewType">Change View Type</string>
    <string name="PopularPeople">Popular People</string>
    <string name="NoPeople">No people</string>
    <!--Movie View-->
    <string name="Info">Info</string>
    <string name="Add">Add</string>
    <string name="Remove">Remove</string>
    <string name="Crew">Crew</string>
    <string name="Directors">Directors</string>
    <string name="Writers">Writers</string>
    <string name="Producers">Producers</string>
    <string name="OriginalTitle">Original Title</string>
    <string name="CountriesTitle">Countries</string>
    <string name="Status">Status</string>
    <string name="Budget">Budget</string>
    <string name="Revenue">Revenue</string>
    <string name="ProductionCompanies">Production Companies</string>
    <string name="Cast">Cast</string>
    <string name="Similar">Similar</string>
    <string name="Related">Related</string>
    <string name="MovieRuntime">%1$s / %2$d min</string>
    <string name="Overview">Overview</string>
    <plurals name="Posters">
        <item quantity="zero">Posters</item>
        <item quantity="one">%d Poster</item>
        <item quantity="two">%d Posters</item>
        <item quantity="few">%d Posters</item>
        <item quantity="many">%d Posters</item>
        <item quantity="other">%d Posters</item>
    </plurals>
    <plurals name="Backdrops">
        <item quantity="zero">Backdrops</item>
        <item quantity="one">%d Backdrop</item>
        <item quantity="two">%d Backdrops</item>
        <item quantity="few">%d Backdrops</item>
        <item quantity="many">%d Backdrops</item>
        <item quantity="other">%d Backdrops</item>
    </plurals>
    <string name="Images">Images</string>

    <string name="LoadingCountries">Loading companies…</string>
    <string name="LoadingTagline">Loading tagline…</string>
    <string name="CurrencyCount">$ %1$s</string>
    <string name="PartOfCollection">Part of the %s</string>

    <string name="NoTrailers">No trailers</string>

    <string-array name="ViewTypes">
        <item>List</item>
        <!--<item>Cards</item>-->
        <item>Posters</item>
    </string-array>
    <string name="AddToFavorites">Add to Favorites</string>
    <string name="RemoveFromFavorites">Remove from Favorites</string>
    <string name="AddToWatchlist">Add to Watchlist</string>
    <string name="RemoveFromWatchList">Remove from Watchlist</string>
    <!--Reviews-->

    <string name="NoReviews">No Reviews</string>
    <string name="ReviewAuthor">Review by %1$s</string>
    <string name="OpenReviewUrl">Open Review url</string>
    <string name="MovieReview">Movie review</string>
    <string name="ReviewSourceUnavailable">Review source unavailable</string>
    <!--Search-->

    <string name="NoResults">No results</string>
    <string name="People">People</string>
    <string name="All">All</string>
    <plurals name="MoviesTotalResults">
        <item quantity="zero">Movies</item>
        <item quantity="one">%d Movie</item>
        <item quantity="two">%d Movies</item>
        <item quantity="few">%d Movies</item>
        <item quantity="many">%d Movies</item>
        <item quantity="other">%d Movies</item>
    </plurals>
    <plurals name="PeopleTotalResults">
        <item quantity="zero">People</item>
        <item quantity="one">%d People</item>
        <item quantity="two">%d People</item>
        <item quantity="few">%d People</item>
        <item quantity="many">%d People</item>
        <item quantity="other">%d People</item>
    </plurals>
    <string name="Keywords">Keywords</string>
    <plurals name="KeywordsTotalResults">
        <item quantity="zero">Keyword</item>
        <item quantity="one">%d Keywords</item>
        <item quantity="two">%d Keywords</item>
        <item quantity="few">%d Keywords</item>
        <item quantity="many">%d Keywords</item>
        <item quantity="other">%d Keywords</item>
    </plurals>
    <string name="Collections">Collections</string>
    <plurals name="CollectionsTotalResults">
        <item quantity="zero">Collection</item>
        <item quantity="one">%d Collections</item>
        <item quantity="two">%d Collections</item>
        <item quantity="few">%d Collections</item>
        <item quantity="many">%d Collections</item>
        <item quantity="other">%d Collections</item>
    </plurals>
    <string name="Companies">Companies</string>
    <plurals name="CompaniesTotalResults">
        <item quantity="zero">Company</item>
        <item quantity="one">%d Companies</item>
        <item quantity="two">%d Companies</item>
        <item quantity="few">%d Companies</item>
        <item quantity="many">%d Companies</item>
        <item quantity="other">%d Companies</item>
    </plurals>
    <!--Person-->
    <string name="Deathday">Deathday: %s (%d)</string>
    <string name="Birthday">Birthday: %s</string>
    <string name="BirthdayWithOld">Birthday: %s (%d)</string>
    <string name="BirthPlace">Birthplace: %s</string>
    <string name="KnownAs">Also known as: %s</string>
    <string name="Copy">Copy</string>
    <string name="Address">Address</string>
    <string name="OpenAddress">Open address</string>
    <!--Settings-->
    <string name="ImageQuality">Image Quality</string>
    <string name="ImageQualityLow">Low</string>
    <string name="ImageQualityMedium">Medium</string>
    <string name="ImageQualityHigh">High</string>
    <string name="ImageQualityOriginal">Original</string>
    <string name="StorageUsage">Storage Usage</string>
    <string name="KeepMedia">Keep Media</string>
    <string name="KeepFewDays">3 days</string>
    <string name="KeepOneWeek">1 week</string>
    <string name="KeepOneMonth">1 month</string>
    <string name="KeepForever">Forever</string>
    <string name="LocalDatabase">Local Database</string>
    <plurals name="Movies">
        <item quantity="zero">%1$d Movies</item>
        <item quantity="one">%1$d Movie</item>
        <item quantity="two">%1$d Movies</item>
        <item quantity="few">%1$d Movies</item>
        <item quantity="many">%1$d Movies</item>
        <item quantity="other">%1$d Movies</item>
    </plurals>
    <plurals name="Images">
        <item quantity="zero">%1$s Images</item>
        <item quantity="one">%1$s Image</item>
        <item quantity="two">%1$s Images</item>
        <item quantity="few">%1$s Images</item>
        <item quantity="many">%1$s Images</item>
        <item quantity="other">%1$s Images</item>
    </plurals>
    <string name="CachedMovies">Cached Movies</string>
    <string name="CachedImages">Cached Images</string>
    <string name="ScrollToTop">Scroll to Top</string>
    <string name="ScrollToTopInfo">Scroll to top by click on current tab</string>
    <string name="CurrentDateAndTime">%1$s at %2$s</string>
    <string name="SearchHistoryEmpty">Your search history is empty</string>
    <string name="SearchHistory">Search History</string>
    <string name="ViewType">View Type</string>
    <string name="AdvancedSettings">Advanced Settings</string>
    <string name="Scrollbars">Scrollbars</string>
    <string name="ScrollbarsInfo">Enable all scrollbars in the app</string>
    <string name="SearchResultsCounter">Search Results Counter</string>
    <string name="FloatingToolbar">Floating Toolbar</string>
    <string name="ZoomReview">Zoom Review</string>
    <string name="ZoomReviewInfo">Enable review gestures control</string>
    <string name="FullOverview">Full Overview</string>
    <string name="FullOverviewInfo">Always display overview fully</string>
    <string name="TextSelectable">Text Selection</string>
    <string name="TextSelectableInfo">Enable text select for all views</string>
    <string name="Theme">Theme</string>
    <string-array name="Themes">
        <item>Light</item>
        <item>Night</item>
        <item>Night Blue</item>
    </string-array>
    <!--About-->

    <string name="ProjectInfo"><![CDATA[<b>]]>Moviemade<![CDATA[</b>]]> is an open source project maintained by one develop. You can help improve the project in one of the following ways:</string>

    <string name="Open">Open</string>
    <string name="CopyLink">Copy link</string>
    <string name="Link">Link</string>
    <string name="ClipboardCopied">%1$s copied to clipboard</string>
    <string name="icon">icon</string>
</resources>