<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="key_browser"
        app:title="@string/in_app_browser"
        app:summary="@string/in_app_browser_info"
        app:defaultValue="true"
        app:iconSpaceReserved="false"/>

    <Preference app:selectable="false" app:layout="@layout/preference_divider"/>

    <SwitchPreferenceCompat
        app:key="key_adult"
        app:title="@string/include_adult"
        app:summary="@string/include_adult_info"
        app:defaultValue="true"
        app:iconSpaceReserved="false"/>

    <Preference app:selectable="false" app:layout="@layout/preference_divider"/>

    <Preference
        app:key="key_about"
        app:title="@string/about"
        app:iconSpaceReserved="false"/>

</androidx.preference.PreferenceScreen>