<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="key_about"
        app:selectable="false"
        app:layout="@layout/view_about"/>

    <Preference
        app:key="key_rate"
        app:icon="@drawable/ic_google_play"
        app:title="@string/rate_google_play"/>

    <Preference app:selectable="false" app:layout="@layout/preference_divider"/>

    <Preference
        app:key="key_fork"
        app:icon="@drawable/ic_github"
        app:title="@string/fork_github"/>

    <Preference app:selectable="false" app:layout="@layout/preference_divider"/>

    <Preference
        app:key="key_sources"
        app:icon="@drawable/ic_storage"
        app:title="@string/open_source_libs"/>

    <Preference app:selectable="false" app:layout="@layout/preference_divider"/>

    <Preference
        app:key="key_feedback"
        app:icon="@drawable/ic_mail"
        app:title="@string/feedback"/>

    <Preference app:selectable="false" app:layout="@layout/preference_divider"/>

    <Preference
        app:key="key_share"
        app:icon="@drawable/ic_share"
        app:title="@string/share_with_friends"/>

    <Preference app:selectable="false" app:layout="@layout/preference_divider"/>

    <Preference
        app:key="key_apps"
        app:icon="@drawable/ic_shop"
        app:title="@string/other_developer_apps"/>

    <Preference app:selectable="false" app:layout="@layout/preference_divider"/>

    <Preference
        app:key="key_donate"
        app:icon="@drawable/ic_paypal"
        app:title="@string/donate_paypal"/>

    <Preference app:selectable="false" app:layout="@layout/preference_divider"/>

    <Preference
        app:key="key_powered"
        app:selectable="false"
        app:layout="@layout/view_powered"/>

</androidx.preference.PreferenceScreen>